# tkinter-example

./: README.md  pyproject.toml  ruff_defaults.toml
src/: main.py
src/controller/: __init__.py  controller.py
src/model/: model_impl.py  type.py
src/model/tests/: test_model.py
src/tkinter_example/: __main__.py
src/tkinter_example/controller/: controller.py
src/tkinter_example/model/: __init__.py  type.py
src/tkinter_example/view/: __main__.py  view_impl.py
src/view/: __init__.py  view_impl.py
tests/: test_model.py
